# backsteros

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  README.md  STRUCTURE.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.kamal/: secrets.example
backsteros-admin/: .env.example  README.md  index.html  package.json  tsconfig.json  vite.config.ts
backsteros-api/: .env.example  Dockerfile  README.md  drizzle.config.ts  package.json
backsteros-app/: .env.example  Dockerfile  README.md  circle-native.d.ts  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  proxy.ts
backsteros-desktop/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
backsteros-desktop/src-tauri/: Cargo.toml  tauri.conf.json
backsteros-desktop/src-tauri/capabilities/: default.json
backsteros-desktop/src-tauri/icons/: icon.icns
backsteros-desktop/src-tauri/permissions/: allow-app-commands.toml  allow-desktop-overlay.toml
backsteros-desktop/src-tauri/src/: lib.rs  main.rs  overlay.rs  whoop.rs
backsteros-mobile/: .env.example  .gitignore  README.md  app.config.ts  app.json  babel.config.js  eas.json  metro.config.js  package.json  tsconfig.json
backsteros-packages/: README.md
backsteros-sync-demo/: .env.example  README.md  index.html  package.json  vite.config.ts
config/: deploy.app.yml  deploy.yml
docs/: 00-vision.md  01-architecture.md  02-tech-stack.md  03-data-model.md  04-api-and-sync.md  05-clients.md  06-storage-and-search.md  07-performance.md  08-legacy-circle.md  09-phased-build-plan.md  (+3 more)
(+1221 files in other folders)
